# second-brain

./: .dev.vars.example  .gitignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts  vitest.setup.ts  wrangler.jsonc  wrangler.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  installer-release.yml  second-brain-sync.yaml
AI_Instructions/: CHATGPT_INSTRUCTIONS.md  CLAUDE_INSTRUCTIONS.md  CODEX_INSTRUCTIONS.md
db/: schema.sql
installer/: .gitignore  README.md  details.html  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
installer/scripts/: bundle-worker.mjs
installer/src/: details.ts  main.ts  shared.ts  style.css
installer/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
installer/src-tauri/capabilities/: default.json
installer/src-tauri/icons/: icon.icns
installer/src-tauri/src/: app_update.rs  commands.rs  lib.rs  main.rs  mcp_config.rs  secure_store.rs  version.rs  windows.rs  worker_bundle.rs
installer/src-tauri/src/cf/: api.rs  backend.rs  mod.rs  oauth.rs  provision.rs  types.rs
integrations/: bookmarklet.js
integrations/claude-code-hooks/: install.sh  session-end.js  session-start.js
integrations/ios-shortcuts/: Brain Dump Template.shortcut  Save To Brain Template.shortcut  Text Brain Dump (Template).shortcut
public/: index.html  manifest.json  utils.js
scripts/: connect-ai-clients.ps1  connect-ai-clients.sh  release.mjs
src/: index.ts
src/integrations/: framework.ts  index.ts  notion.ts
test/helpers/: d1-mock.ts  make-env.ts  make-request.ts
(+57 files in other folders)
