[package]
name = "second-brain-desktop"
version = "0.1.0"
description = "Second Brain desktop app — one-click setup and a native shell for your own memory dashboard"
edition = "2021"
rust-version = "1.82"
license = "MIT"
repository = "https://github.com/rahilp/second-brain-cloudflare"

[lib]
name = "second_brain_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "multipart"] }
tokio = { version = "1", features = ["macros", "time"] }
keyring = { version = "3", features = ["apple-native", "windows-native"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
tiny_http = "0.12"
include_dir = "0.7"
url = "2"
dirs = "6"
thiserror = "2"
log = "0.4"

[profile.release]
codegen-units = 1
lto = true
strip = true
